--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.android.gms:play-services-base:17.6.0'
+        classpath 'com.google.android.gms:play-services-basement:17.6.0'
     }
 }
 
